Use correct vsce path

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,4 +14,4 @@ jobs:
           npm i vsce
       - name: Package
         run: |
-          ./vsce package
+          ./node_modules/vsce/out/vsce package
